2009-08-22  Glenn Morris  <rgm@gnu.org>

	* gnus-art.el (gnus-button-patch): Use forward-line rather than
	goto-line.

2009-07-24  Glenn Morris  <rgm@gnu.org>

	* gnus-demon.el (gnus-demon-add-nntp-close-connection):
	Fix typo.  (Bug#3903)

2009-07-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-mode-map): Bind the "e" key to
	gnus-article-read-summary-keys rather than gnus-summary-edit-article
	that should not be used for draft articles.
	(gnus-article-read-summary-keys): Use key-binding instead of lookup-key
	that has no concern in minor mode keys.
	(gnus-article-summary-command, gnus-article-summary-command-nosave):
	Abolish.

2009-07-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnrss.el (nnrss-request-article): Allow mml-to-mime to generate MIME
	article without making inquiry to a user for unknown encoding.

	* nnmaildir.el (nnmaildir--group-maxnum, nnmaildir--new-number)
	(nnmaildir--scan): Assume i-node and device number that file-attributes
	returns might be cons-cell.

2009-07-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el: Remove docs now in auth.texi.  Don't use
	`gnus-message' for logging.  Add new variables `auth-source-debug' and
	`auth-source-hide-passwords' and use them.

2009-07-15  Glenn Morris  <rgm@gnu.org>

	* gnus-spec.el (gnus-make-format-preserve-properties): Doc fix.

2009-07-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-make-rss-group): Strip newlines and
	excessive whitespace from the default values of title and description.

2009-06-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-dissect-buffer): Use message-fetch-field instead of
	mail-fetch-field to fetch Content-Description header in order to
	exclude newlines.

2009-06-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-delete-part): Specify gnus-decoded as charset
	to deleted part.

2009-05-30  David Engster  <dengste@eml.cc>

	* nnmairix.el: Remove old documentation in the commentary block.